Next version:
  Tables can be dumped from "Table view" to SQL file (that can later be loaded 
    by execute script)
  Reset also restores the show welcome screen
  Export (to ASCII file) now don't throw exception if missing or invalid SQL
  	but gives error
  Messages after export and restore and better error handling in places
  Recent files - easy open resently opened databases 
    
Working on:
  Planning for further development, feature request are welcome, could be:
	Sort data / query results by clicking on title
	Implement some of SQLites .commands:
	  .import FILE TABLE	import data from text file to table
	"Tab" view / show active tab
	Scripts editor?
  
Version 1.2.2
  News screen on open
  Bug with displaying data form views fixed
  
Version 1.2.1
  Bug with displaying data form views fixed

Version 1.2
  Correctly scaling on the Galaxy Tab and hopefully on other large displays
  Open SQL files (from database view) and executed all or single line
  Error messages during restore and execution of scripts and statements
  Data editing form table viewer by using "Edit" button at each row
  New records can be added by using the "New" button in the table heading
    Input mode during editing and insert depends on the fields data type. SQLite
	uses a dynamic type system where field types can be given as any string
	aSQLiteManager translates this string into the following types and use this
	to set input mode (SQLite types i parenthesis). The translation is NOT
	case sensitive:
		STRING (string, text), INTEGER (integer), FLOAT (real, float, double),
		DATE (date), TIME (time), DATETIME (datetime), BOOLEAN (boolean, bool),
		PHONENO (phoneno). aSQLiteManager does not handle BLOB

Version 1.2β
  Open SQL files (from database view) and executed all or single lines
  Error messages during restore and execution of scripts and statements
  Data editing form table viewer by using "Edit" button at each row