@@ -7,6 +7,13 @@
     android:inputType="number"
     android:defaultValue="15"
   />
+  <EditTextPreference
+    android:key="RecentFiles"
+    android:title="@string/Recently"
+    android:summary="@string/Recently"
+    android:inputType="number"
+    android:defaultValue="5"
+  />
   <CheckBoxPreference
     android:key="SaveSQL"
     android:title="Save SQL"
